name:                free-transformers
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/bts/free-transformers#readme
license:             BSD3
license-file:        LICENSE
author:              Brian Schroeder
maintainer:          bts@gmail.com
copyright:           2016 Brian Schroeder
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     FreeTransformers
  build-depends:       base >= 4.7 && < 5
                     , free
                     , lens
  default-language:    Haskell2010

executable free-transformers-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , free-transformers
  default-language:    Haskell2010

test-suite free-transformers-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , free-transformers
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/bts/free-transformers
